--- a/style.css
+++ b/style.css
@@ -755,3 +755,27 @@ form .send-btn {
     margin-top: 10px;
     display: block;
 }
+
+.resume-btn {
+    display: inline-block;
+    padding: 11px 26px;
+    background: transparent;
+    color: var(--main-color);
+    border: 2px solid var(--main-color);
+    border-radius: 8px;
+    font-size: 15px;
+    font-weight: 600;
+    transition: all .50s ease;
+    width: 30%;
+}
+
+.resume-btn:hover {
+    background: var(--main-color);
+    color: var(--bg-color);
+    box-shadow: 0 0 20px var(--main-color);
+    transform: scale(1.1);
+}
+
+#open-resume {
+    cursor: pointer;
+}
